contact api is finished

--- a/Contacts.Api/Contacts.Api.csproj
+++ b/Contacts.Api/Contacts.Api.csproj
@@ -11,7 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\Contacts.Connection\Contacts.Connection.csproj" />
+    <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 
 </Project>
