--- a/Reports.Api/appsettings.json
+++ b/Reports.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "pgConnectionString": "User ID=contact;Password=123456Aa.;Host=localhost;Port=5432;Database=contact;"
+    "pgConnectionString": "User ID=contact;Password=123456Aa.;Host=localhost;Port=5432;Database=report;"
   },
   "Options": {
     "RabbitMqConnectionString": "amqp://guest:guest@localhost:5672"
