--- a/Reports.Application/Reports.Application.csproj
+++ b/Reports.Application/Reports.Application.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Reports.Domain\Reports.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
