--- a/Reports.Connection/Reports.Connection.csproj
+++ b/Reports.Connection/Reports.Connection.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Reports.Application\Reports.Application.csproj" />
+  </ItemGroup>
+
 </Project>
